src/containers/PageBuilder/BlockBuilder/BlockDefault/BlockDefault.module.css
@import '../../../../styles/customMediaQueries.css';
.root {
}

.media {
  width: 100%;
  border-radius: 8px;
  margin-bottom: 0;
}

.text {
  width: 100%;
  margin-top: 20px;

  &:first-child {
    margin-top: 0;
  }
}

.card {
  cursor: pointer;
  transition: transform 0.3s ease;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.card:hover {
  transform: translateY(-5px);
}

.cardText {
  padding: 16px;
}
.align {
  text-align: left;
  justify-self: start;

  @media (--viewportMedium) {
    text-align: center;
    justify-self: center;
  }
}


.ctaButtonOutlined {
  composes: align;
  display: inline-block;
  padding: 8px 20px;
  font-size: 15px;
  border-radius: 4px;
  color: white;
  border-width: 2px;
  border-style: solid;
  text-decoration: none!important;
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
  font-weight: 500;
  margin-top: 24px;

  &:hover {
    text-decoration: none;
    background-color: white;
    border-color: transparent;
  }
}
.ctaButtonOutlinedGreen {
  composes: align;
  display: inline-block;
  padding: 8px 20px;
  font-size: 15px;
  border-radius: 4px;
  color: white;
  border-width: 2px;
  border-style: solid;
  text-decoration: none!important;
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
  font-weight: 500;
  margin-top: 24px;

  &:hover {
    text-decoration: none;
    background-color: white;
    color: #2a623d!important;
    border-color: transparent;
  }
}

.artistSectionText {
  margin-left: 200px; /* Ajusta este valor según necesites */
}
@media (max-width: 950px) {
  .artistSectionText {
    margin-left: 10px; /* Margen más pequeño en móviles */
  }
}

